Samu:
    Market:
        get_ticker():
            Added possibility to display html for jupyter notebooks with relevant info, possibility to display raw request response,
            or display float value of ticker.

    Trade:
        get_open_orders():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for open orders, 
            possibility to display raw request response, or display simple list of all open orders.
        
        get_executions():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for executed orders, 
            possibility to display raw request response, or display simple list of all open orders.
        
        get_positions():
            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for open positions, 
            possibility to display raw request response, or display simple list of all open orders.
        
        place_order():
            Added documentation explaining nearly all possible orders, funcs parameters and correct formatting of response.

        place_spot_order():
            Added documentation explaining all spot and margin orders, funcs parameters and correct formatting of response.

        place_futures_order():
            Added documentation explaining nearly all possible futures orders, funcs parameters and correct formatting of response.

        place_conditional_order():
            Added documentation explaining nearly all conditional orders, funcs parameters and correct formatting of response.

        close_order():
            Added documentation explaining how to close linear positions, their funcs parameters and correct formatting of response.

        cancel_order():
            Added documentation explaining how to cancel orders, their funcs parameters and correct formatting of response.

        cancel_all_orders():